--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "router-dom": "^3.0.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
